# NeuralNetwork

./: CMakeLists.txt  README.md  main.cc
include/: Layer.hh  Matrix.hh  NeuralNetwork.hh  Neuron.hh  ReLUNeuron.hh  SigmoidNeuron.hh  Utils.hh
scripts/: plot_errors.C  plot_errors_2d.C
src/: Layer.cc  Matrix.cc  NeuralNetwork.cc  Neuron.cc  ReLUNeuron.cc  SigmoidNeuron.cc
